--- a/nft.html
+++ b/nft.html
@@ -7,6 +7,303 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
+    <div class="modals-container">
+      <div class="walletModal">
+        <div class="walletModal-wrapper">
+          <div class="walletModal__buttons">
+            <button class="walletModal__btn walletModal__btn--left">
+              Connect Wallet
+            </button>
+            <button class="walletModal__btn walletModal__btn--right">
+              What's a Web3 Wallet?
+            </button>
+          </div>
+          <div class="walletModal-b1">
+            <div class="walletModal-b1-a">
+              <div class="walletModal-b1-a__text">
+                <h2 class="walletModal-b1-a__title">Connect Wallet</h2>
+                <p class="walletModal-b1-a__description">
+                  Start by connecting with one of the wallets below. Be sure to
+                  store your private keys or seed phrase securely. Never share
+                  them with anyone.
+                </p>
+              </div>
+              <div class="walletModal-b1-a-imgs">
+                <div class="walletModal-b1-a-imgs__img">
+                  <div class="walletModal-b1-a-imgs__image-container">
+                    <img
+                      src="./assets/images/wallets/metamask.png"
+                      alt="Metamask"
+                    />
+                  </div>
+                  <span class="walletModal-b1-a-imgs__text">Metamask</span>
+                </div>
+
+                <div class="walletModal-b1-a-imgs__img">
+                  <div class="walletModal-b1-a-imgs__image-container">
+                    <img
+                      src="./assets/images/wallets/binance.png"
+                      alt="Binance wallet"
+                    />
+                  </div>
+                  <span class="walletModal-b1-a-imgs__text"
+                    >Binance Wallet</span
+                  >
+                </div>
+                <div class="walletModal-b1-a-imgs__img">
+                  <div class="walletModal-b1-a-imgs__image-container">
+                    <img
+                      src="./assets/images/wallets/coinbase.png"
+                      alt="Coinbase wallet"
+                    />
+                  </div>
+                  <span class="walletModal-b1-a-imgs__text"
+                    >Coinbase Wallet</span
+                  >
+                </div>
+                <div class="walletModal-b1-a-imgs__img">
+                  <div class="walletModal-b1-a-imgs__image-container">
+                    <img
+                      src="./assets/images/wallets/trust.png"
+                      alt="Trust wallet"
+                    />
+                  </div>
+                  <span class="walletModal-b1-a-imgs__text">Trust Wallet</span>
+                </div>
+                <div class="walletModal-b1-a-imgs__img">
+                  <div class="walletModal-b1-a-imgs__image-container">
+                    <img
+                      src="./assets/images/wallets/walletconnect.png"
+                      alt="Wallet connect"
+                    />
+                  </div>
+                  <span class="walletModal-b1-a-imgs__text">WalletConnect</span>
+                </div>
+                <div class="walletModal-b1-a-imgs__img">
+                  <div class="walletModal-b1-a-imgs__image-container">
+                    <img
+                      src="./assets/images/wallets/opera.png"
+                      alt="Opera wallet"
+                    />
+                  </div>
+                  <span class="walletModal-b1-a-imgs__text">Opera Wallet</span>
+                </div>
+                <div class="walletModal-b1-a-imgs__img">
+                  <div class="walletModal-b1-a-imgs__image-container">
+                    <img
+                      src="./assets/images/wallets/brave.png"
+                      alt="Brave wallet"
+                    />
+                  </div>
+                  <span class="walletModal-b1-a-imgs__text">Brave Wallet</span>
+                </div>
+                <div class="walletModal-b1-a-imgs__img">
+                  <div class="walletModal-b1-a-imgs__image-container">
+                    <img
+                      src="./assets/images/wallets/mathwallet.png"
+                      alt="Math wallet"
+                    />
+                  </div>
+                  <span class="walletModal-b1-a-imgs__text">Math Wallet</span>
+                </div>
+                <div class="walletModal-b1-a-imgs__img">
+                  <div
+                    class="walletModal-b1-a-imgs__image-container walletModal-b1-a-imgs__image-container--svg"
+                  >
+                    <svg
+                      viewBox="0 0 24 24"
+                      color="text"
+                      width="20px"
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="sc-231a1e38-0 dPwWVs"
+                    >
+                      <path
+                        d="M6 10C4.9 10 4 10.9 4 12C4 13.1 4.9 14 6 14C7.1 14 8 13.1 8 12C8 10.9 7.1 10 6 10ZM18 10C16.9 10 16 10.9 16 12C16 13.1 16.9 14 18 14C19.1 14 20 13.1 20 12C20 10.9 19.1 10 18 10ZM12 10C10.9 10 10 10.9 10 12C10 13.1 10.9 14 12 14C13.1 14 14 13.1 14 12C14 10.9 13.1 10 12 10Z"
+                      ></path>
+                    </svg>
+                  </div>
+                  <span class="walletModal-b1-a-imgs__text">More</span>
+                </div>
+              </div>
+            </div>
+            <div class="walletModal-b1-b">
+              <h2 class="walletModal-b1-b__title">Haven’t got a wallet yet?</h2>
+              <img
+                class="walletModal-b1-b__img"
+                src="./assets/images/wallets/wallet_intro.png"
+                alt="wallet intro"
+              />
+              <a href="" class="walletModal-b1-b__link">
+                Learn How to connect
+                <svg
+                  viewBox="0 0 24 24"
+                  color="backgroundAlt"
+                  width="20px"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="sc-4ba21b47-0 eAZfYF"
+                >
+                  <path
+                    d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="popup">
+        <div class="popup__header">
+          <p>Settings</p>
+          <button class="popup__close">
+            <svg
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 24 24"
+              color="#FFFFFF"
+              width="24"
+              xmlns="http://www.w3.org/2000/svg"
+              class="sc-231a1e38-0 iNUyNs"
+              height="24"
+            >
+              <path
+                fill="#FFFFFF"
+                d="M18.3 5.70997C17.91 5.31997 17.28 5.31997 16.89 5.70997L12 10.59L7.10997 5.69997C6.71997 5.30997 6.08997 5.30997 5.69997 5.69997C5.30997 6.08997 5.30997 6.71997 5.69997 7.10997L10.59 12L5.69997 16.89C5.30997 17.28 5.30997 17.91 5.69997 18.3C6.08997 18.69 6.71997 18.69 7.10997 18.3L12 13.41L16.89 18.3C17.28 18.69 17.91 18.69 18.3 18.3C18.69 17.91 18.69 17.28 18.3 16.89L13.41 12L18.3 7.10997C18.68 6.72997 18.68 6.08997 18.3 5.70997Z"
+              ></path>
+            </svg>
+          </button>
+        </div>
+        <div class="popup__body">
+          <p class="popup__text popup__text--warning">GLOBAL</p>
+          <div class="popup__checkbox">
+            <p class="popup__text popup__text--details">Dark mode</p>
+
+            <div class="theme-switch">
+              <input type="checkbox" id="switch-theme" />
+              <div class="theme-switch__button"></div>
+              <div class="theme-switch__background-svg">
+                <svg
+                  viewBox="0 0 24 24"
+                  color="backgroundAlt"
+                  width="20px"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="sc-231a1e38-0 kONOCo"
+                >
+                  <path
+                    d="M5.66 4.2L6.05 4.59C6.44 4.97 6.44 5.61 6.05 5.99L6.04 6C5.65 6.39 5.03 6.39 4.64 6L4.25 5.61C3.86 5.23 3.86 4.6 4.25 4.21L4.26 4.2C4.64 3.82 5.27 3.81 5.66 4.2Z"
+                  ></path>
+                  <path
+                    d="M1.99 10.95H3.01C3.56 10.95 4 11.39 4 11.95V11.96C4 12.51 3.56 12.95 3 12.94H1.99C1.44 12.94 1 12.5 1 11.95V11.94C1 11.39 1.44 10.95 1.99 10.95Z"
+                  ></path>
+                  <path
+                    d="M12 1H12.01C12.56 1 13 1.44 13 1.99V2.96C13 3.51 12.56 3.95 12 3.94H11.99C11.44 3.94 11 3.5 11 2.95V1.99C11 1.44 11.44 1 12 1Z"
+                  ></path>
+                  <path
+                    d="M18.34 4.2C18.73 3.82 19.36 3.82 19.75 4.21C20.14 4.6 20.14 5.22 19.75 5.61L19.36 6C18.98 6.39 18.35 6.39 17.96 6L17.95 5.99C17.56 5.61 17.56 4.98 17.95 4.59L18.34 4.2Z"
+                  ></path>
+                  <path
+                    d="M18.33 19.7L17.94 19.31C17.55 18.92 17.55 18.3 17.95 17.9C18.33 17.52 18.96 17.51 19.35 17.9L19.74 18.29C20.13 18.68 20.13 19.31 19.74 19.7C19.35 20.09 18.72 20.09 18.33 19.7Z"
+                  ></path>
+                  <path
+                    d="M20 11.95V11.94C20 11.39 20.44 10.95 20.99 10.95H22C22.55 10.95 22.99 11.39 22.99 11.94V11.95C22.99 12.5 22.55 12.94 22 12.94H20.99C20.44 12.94 20 12.5 20 11.95Z"
+                  ></path>
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M6 11.95C6 8.64 8.69 5.95 12 5.95C15.31 5.95 18 8.64 18 11.95C18 15.26 15.31 17.95 12 17.95C8.69 17.95 6 15.26 6 11.95ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
+                  ></path>
+                  <path
+                    d="M12 22.9H11.99C11.44 22.9 11 22.46 11 21.91V20.95C11 20.4 11.44 19.96 11.99 19.96H12C12.55 19.96 12.99 20.4 12.99 20.95V21.91C12.99 22.46 12.55 22.9 12 22.9Z"
+                  ></path>
+                  <path
+                    d="M5.66 19.69C5.27 20.08 4.64 20.08 4.25 19.69C3.86 19.3 3.86 18.68 4.24 18.28L4.63 17.89C5.02 17.5 5.65 17.5 6.04 17.89L6.05 17.9C6.43 18.28 6.44 18.91 6.05 19.3L5.66 19.69Z"
+                  ></path>
+                </svg>
+                <svg
+                  viewBox="0 0 24 24"
+                  color="backgroundAlt"
+                  width="20px"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="sc-231a1e38-0 kONOCo"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M4.1534 13.6089L4.15362 13.61C4.77322 16.8113 7.42207 19.3677 10.647 19.8853L10.6502 19.8858C13.0412 20.2736 15.2625 19.6103 16.9422 18.2833C11.3549 16.2878 7.9748 10.3524 9.26266 4.48816C5.69846 5.77194 3.35817 9.51245 4.1534 13.6089ZM10.0083 2.21054C4.76622 3.2533 1.09895 8.36947 2.19006 13.9901C2.97006 18.0201 6.28006 21.2101 10.3301 21.8601C13.8512 22.4311 17.0955 21.1608 19.2662 18.8587C19.2765 18.8478 19.2866 18.837 19.2968 18.8261C19.4385 18.6745 19.5757 18.5184 19.7079 18.3581C19.7105 18.355 19.713 18.3519 19.7156 18.3487C19.8853 18.1426 20.0469 17.9295 20.2001 17.7101C20.4101 17.4001 20.2401 16.9601 19.8701 16.9201C19.5114 16.8796 19.1602 16.8209 18.817 16.7452C18.7964 16.7406 18.7758 16.736 18.7552 16.7313C18.6676 16.7114 18.5804 16.6903 18.4938 16.6681C18.4919 16.6676 18.4901 16.6672 18.4882 16.6667C13.0234 15.2647 9.72516 9.48006 11.4542 4.03417C11.4549 4.03214 11.4555 4.03012 11.4562 4.0281C11.4875 3.92954 11.5205 3.83109 11.5552 3.73278C11.5565 3.72911 11.5578 3.72543 11.5591 3.72175C11.6768 3.38921 11.8136 3.05829 11.9701 2.73005C12.1301 2.39005 11.8501 2.01005 11.4701 2.03005C11.1954 2.04379 10.924 2.06848 10.6561 2.10368C10.6517 2.10427 10.6472 2.10486 10.6428 2.10545C10.4413 2.13221 10.2418 2.16492 10.0446 2.2034C10.0325 2.20576 10.0204 2.20814 10.0083 2.21054Z"
+                  ></path>
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="popup__checkbox">
+            <span>
+              Subgraph Health Indicator
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                class="sc-231a1e38-0 gUXTeE"
+                color="textSubtle"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm-1-4h2v2h-2v-2Zm1.61-9.96c-2.06-.3-3.88.97-4.43 2.79-.18.58.26 1.17.87 1.17h.2c.41 0 .74-.29.88-.67.32-.89 1.27-1.5 2.3-1.28.95.2 1.65 1.13 1.57 2.1-.1 1.34-1.62 1.63-2.45 2.88 0 .01-.01.01-.01.02-.01.02-.02.03-.03.05-.09.15-.18.32-.25.5-.01.03-.03.05-.04.08-.01.02-.01.04-.02.07-.12.34-.2.75-.2 1.25h2c0-.42.11-.77.28-1.07.02-.03.03-.06.05-.09.08-.14.18-.27.28-.39.01-.01.02-.03.03-.04.1-.12.21-.23.33-.34.96-.91 2.26-1.65 1.99-3.56-.24-1.74-1.61-3.21-3.35-3.47Z"
+                />
+              </svg>
+            </span>
+          </div>
+          <div class="popup__checkbox">
+            <span
+              >Show username
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                class="sc-231a1e38-0 gUXTeE"
+                color="textSubtle"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm-1-4h2v2h-2v-2Zm1.61-9.96c-2.06-.3-3.88.97-4.43 2.79-.18.58.26 1.17.87 1.17h.2c.41 0 .74-.29.88-.67.32-.89 1.27-1.5 2.3-1.28.95.2 1.65 1.13 1.57 2.1-.1 1.34-1.62 1.63-2.45 2.88 0 .01-.01.01-.01.02-.01.02-.02.03-.03.05-.09.15-.18.32-.25.5-.01.03-.03.05-.04.08-.01.02-.01.04-.02.07-.12.34-.2.75-.2 1.25h2c0-.42.11-.77.28-1.07.02-.03.03-.06.05-.09.08-.14.18-.27.28-.39.01-.01.02-.03.03-.04.1-.12.21-.23.33-.34.96-.91 2.26-1.65 1.99-3.56-.24-1.74-1.61-3.21-3.35-3.47Z"
+                />
+              </svg>
+            </span>
+          </div>
+          <div class="popup__checkbox">
+            <span
+              >Token Risk Scanning
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                class="sc-231a1e38-0 gUXTeE"
+                color="textSubtle"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm-1-4h2v2h-2v-2Zm1.61-9.96c-2.06-.3-3.88.97-4.43 2.79-.18.58.26 1.17.87 1.17h.2c.41 0 .74-.29.88-.67.32-.89 1.27-1.5 2.3-1.28.95.2 1.65 1.13 1.57 2.1-.1 1.34-1.62 1.63-2.45 2.88 0 .01-.01.01-.01.02-.01.02-.02.03-.03.05-.09.15-.18.32-.25.5-.01.03-.03.05-.04.08-.01.02-.01.04-.02.07-.12.34-.2.75-.2 1.25h2c0-.42.11-.77.28-1.07.02-.03.03-.06.05-.09.08-.14.18-.27.28-.39.01-.01.02-.03.03-.04.1-.12.21-.23.33-.34.96-.91 2.26-1.65 1.99-3.56-.24-1.74-1.61-3.21-3.35-3.47Z"
+                />
+              </svg>
+            </span>
+          </div>
+          <div class="popup__content">
+            <p>Default Transaction Speed (GWEI)</p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              class="sc-231a1e38-0 gUXTeE"
+              color="textSubtle"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm-1-4h2v2h-2v-2Zm1.61-9.96c-2.06-.3-3.88.97-4.43 2.79-.18.58.26 1.17.87 1.17h.2c.41 0 .74-.29.88-.67.32-.89 1.27-1.5 2.3-1.28.95.2 1.65 1.13 1.57 2.1-.1 1.34-1.62 1.63-2.45 2.88 0 .01-.01.01-.01.02-.01.02-.02.03-.03.05-.09.15-.18.32-.25.5-.01.03-.03.05-.04.08-.01.02-.01.04-.02.07-.12.34-.2.75-.2 1.25h2c0-.42.11-.77.28-1.07.02-.03.03-.06.05-.09.08-.14.18-.27.28-.39.01-.01.02-.03.03-.04.1-.12.21-.23.33-.34.96-.91 2.26-1.65 1.99-3.56-.24-1.74-1.61-3.21-3.35-3.47Z"
+              />
+            </svg>
+          </div>
+          <div class="popup__buttons">
+            <button class="popup__option popup__option--active">Default</button>
+            <button class="popup__option">Standard (3)</button>
+            <button class="popup__option">Fast (4)</button>
+            <button class="popup__option">Instant (5)</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="phishing-popup">
       <div class="phishing-popup__content">
         <div class="phishing-popup__main">
@@ -453,7 +750,7 @@
           </div>
           <!-- NAVBAR RIGHT BUTTON SETTINGS-->
           <div class="dropdown dropdown--settings" id="popup_btn">
-            <a href="#" class="dropdownbtn">
+            <a class="dropdownbtn">
               <svg
                 viewBox="0 0 24 24"
                 height="24"
@@ -525,7 +822,7 @@
               </div>
             </div>
           </div>
-          <div class="connect-wallet" id="connectWalletButton">
+          <div class="connect-wallet connectWalletButton">
             <button class="menu-button">
               <span class="connect-wallet-lg"> Connect Wallet</span>
               <span class="connect-wallet-sx"> Connect</span>
@@ -2737,5 +3034,7 @@
     </footer>
     <script src="script/theme-switch.js" type="module"></script>
     <script src="script/phishing-warning.js" type="module"></script>
+    <script src="./script/nav-buttons.js"></script>
+    <script src="./script/show-faq.js"></script>
   </body>
 </html>
