fix: fixed navbar small glitches, deleted comments

--- a/index.html
+++ b/index.html
@@ -340,9 +340,7 @@
       </div>
     </div>
 
-    <!-- NAVBAR -->
     <nav class="navbar">
-      <!-- NAVBAR LEFT START-->
       <div class="navbar-l">
         <div class="navbar-l__logo">
           <a href="./index.html">
@@ -417,7 +415,6 @@
             </svg>
           </a>
         </div>
-        <!-- NAVBAR LEFT MENU - TRADE-->
         <div class="navbar-l__menu">
           <div class="dropdown">
             <a class="dropdownbtn__link dropdownbtn__link--green-dot">
@@ -444,7 +441,7 @@
               </svg>
               Trade
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-left">
               <a>Swap</a>
               <a href="#">Liquidity </a>
               <a class="perpetual" href="#"
@@ -477,7 +474,6 @@
               <a href="#">Limit (V2)</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT EARN -->
           <div class="dropdown">
             <a class="dropdownbtn__link" href="#">
               <svg
@@ -509,14 +505,13 @@
               </svg>
               Earn
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-left">
               <a href="#">Farms</a>
               <a href="#">Pools</a>
               <a href="#">Liquid Staking</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT WIN -->
-          <div class="dropdown win">
+          <div class="dropdown">
             <a
               class="dropdownbtn__link dropdownbtn__link--red-dot"
               href="win.html"
@@ -536,7 +531,7 @@
               </svg>
               Win
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-left">
               <a href="#">Trading Reward </a>
               <a href="#">Trading competition</a>
               <a href="win.html">Prediction (BETA)</a>
@@ -544,7 +539,6 @@
               <a href="#">Pottery (BETA)</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT NFT -->
           <div class="dropdown">
             <a class="dropdownbtn__link" href="nft.html">
               <svg
@@ -562,13 +556,12 @@
               </svg>
               NFT
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-right">
               <a href="nft.html">Overview</a>
               <a href="#">Collections</a>
               <a href="#">Activity</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT GAME -->
           <div class="dropdown">
             <a
               class="dropdownbtn__link dropdownbtn__link--green-dot dropdownbtn__link--active"
@@ -660,11 +653,10 @@
               </svg>
               Game
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-right">
               <a href="#"> Pancake Protectors </a>
             </div>
           </div>
-          <!-- NAVBAR LEFT SETTINGS-->
           <div class="dropdown">
             <a class="dropdownbtn__link" href="#">
               <svg
@@ -679,7 +671,7 @@
                 />
               </svg>
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-other">
               <a href="#">Info</a>
               <a href="#">IFO</a>
               <a href="#">Voting</a>
@@ -692,8 +684,7 @@
           </div>
         </div>
       </div>
-      <!-- NAVBAR LEFT END-->
-      <!-- NAVBAR RIGHT START -->
+
       <div class="navbar-r">
         <div class="navbar-r__content">
           <div class="navbar-r__currency">
@@ -720,7 +711,6 @@
                   ></path>
                 </svg>
               </a>
-              <!-- NAVBAR RIGHT LANGUAGES-->
 
               <div class="dropdown__content">
                 <a href="#">العربية</a>
@@ -754,7 +744,7 @@
               </div>
             </div>
           </div>
-          <!-- NAVBAR RIGHT BUTTON SETTINGS-->
+
           <div class="dropdown dropdown--settings" id="popup_btn">
             <a class="dropdownbtn">
               <svg
@@ -771,7 +761,6 @@
               </svg>
             </a>
           </div>
-          <!-- NAVBAR RIGHT BUTTON BNB CHAIN -->
 
           <div class="bnb-smart-chain">
             <div class="dropdown">
@@ -782,9 +771,8 @@
                     alt="cubo-portal"
                   />
                   <span class="sx-block">BNB</span>
-                  <!--//TO REFACTOR -->
-                  <span class="lg-block">BNB Smart Chain</span
-                  ><!--//TO REFACTOR -->
+
+                  <span class="lg-block">BNB Smart Chain</span>
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     viewBox="0 0 24 24"
