fix: fixed navbar behaviour consistency in win & nft pages, cleaned comments

--- a/nft.html
+++ b/nft.html
@@ -338,7 +338,6 @@
       </div>
     </div>
     <nav class="navbar">
-      <!-- NAVBAR LEFT START-->
       <div class="navbar-l">
         <div class="navbar-l__logo">
           <a href="./index.html">
@@ -413,7 +412,6 @@
             </svg>
           </a>
         </div>
-        <!-- NAVBAR LEFT MENU - TRADE-->
         <div class="navbar-l__menu">
           <div class="dropdown">
             <a class="dropdownbtn__link dropdownbtn__link--green-dot">
@@ -473,7 +471,6 @@
               <a href="#">Limit (V2)</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT EARN -->
           <div class="dropdown">
             <a class="dropdownbtn__link" href="#">
               <svg
@@ -511,7 +508,6 @@
               <a href="#">Liquid Staking</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT WIN -->
           <div class="dropdown win">
             <a
               class="dropdownbtn__link dropdownbtn__link--red-dot"
@@ -540,7 +536,6 @@
               <a href="#">Pottery (BETA)</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT NFT -->
           <div class="dropdown">
             <a
               class="dropdownbtn__link dropdownbtn__link--active"
@@ -559,13 +554,12 @@
               </svg>
               NFT
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-right">
               <a href="nft.html" class="dropdownbtn__link--active">Overview</a>
               <a href="#">Collections</a>
               <a href="#">Activity</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT GAME -->
           <div class="dropdown">
             <a class="dropdownbtn__link dropdownbtn__link--green-dot" href="">
               <svg
@@ -654,11 +648,10 @@
               </svg>
               Game
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-right">
               <a href="#"> Pancake Protectors </a>
             </div>
           </div>
-          <!-- NAVBAR LEFT SETTINGS-->
           <div class="dropdown">
             <a class="dropdownbtn__link" href="#">
               <svg
@@ -673,7 +666,7 @@
                 />
               </svg>
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-other">
               <a href="#">Info</a>
               <a href="#">IFO</a>
               <a href="#">Voting</a>
@@ -686,8 +679,6 @@
           </div>
         </div>
       </div>
-      <!-- NAVBAR LEFT END-->
-      <!-- NAVBAR RIGHT START -->
       <div class="navbar-r">
         <div class="navbar-r__content">
           <div class="navbar-r__currency">
@@ -714,8 +705,6 @@
                   ></path>
                 </svg>
               </a>
-              <!-- NAVBAR RIGHT LANGUAGES-->
-
               <div class="dropdown__content">
                 <a href="#">العربية</a>
                 <a href="#">বাংলা</a>
@@ -748,7 +737,6 @@
               </div>
             </div>
           </div>
-          <!-- NAVBAR RIGHT BUTTON SETTINGS-->
           <div class="dropdown dropdown--settings" id="popup_btn">
             <a class="dropdownbtn">
               <svg
@@ -765,8 +753,6 @@
               </svg>
             </a>
           </div>
-          <!-- NAVBAR RIGHT BUTTON BNB CHAIN -->
-
           <div class="bnb-smart-chain">
             <div class="dropdown">
               <div class="dropdown-bnb">
@@ -776,9 +762,7 @@
                     alt="cubo-portal"
                   />
                   <span class="sx-block">BNB</span>
-                  <!--//TO REFACTOR -->
-                  <span class="lg-block">BNB Smart Chain</span
-                  ><!--//TO REFACTOR -->
+                  <span class="lg-block">BNB Smart Chain</span>
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     viewBox="0 0 24 24"
@@ -3053,5 +3037,6 @@
     <script src="./script/nav-buttons.js"></script>
     <script src="./script/show-faq.js"></script>
     <script src="./script/button-scroll.js"></script>
+    <script src="./script/navbar-sticky.js"></script>
   </body>
 </html>
