--- a/win.html
+++ b/win.html
@@ -339,7 +339,6 @@
       </div>
     </div>
     <nav class="navbar">
-      <!-- NAVBAR LEFT START-->
       <div class="navbar-l">
         <div class="navbar-l__logo">
           <a href="./index.html">
@@ -414,7 +413,6 @@
             </svg>
           </a>
         </div>
-        <!-- NAVBAR LEFT MENU - TRADE-->
         <div class="navbar-l__menu">
           <div class="dropdown">
             <a class="dropdownbtn__link dropdownbtn__link--green-dot">
@@ -474,7 +472,6 @@
               <a href="#">Limit (V2)</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT EARN -->
           <div class="dropdown">
             <a class="dropdownbtn__link" href="#">
               <svg
@@ -512,7 +509,6 @@
               <a href="#">Liquid Staking</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT WIN -->
           <div class="dropdown win">
             <a
               class="dropdownbtn__link dropdownbtn__link--red-dot dropdownbtn__link--active"
@@ -543,7 +539,6 @@
               <a href="#">Pottery (BETA)</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT NFT -->
           <div class="dropdown">
             <a class="dropdownbtn__link" href="nft.html">
               <svg
@@ -561,13 +556,12 @@
               </svg>
               NFT
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-right">
               <a href="nft.html">Overview</a>
               <a href="#">Collections</a>
               <a href="#">Activity</a>
             </div>
           </div>
-          <!-- NAVBAR LEFT GAME -->
           <div class="dropdown">
             <a
               class="dropdownbtn__link dropdownbtn__link--green-dot dropdownbtn__link"
@@ -659,11 +653,10 @@
               </svg>
               Game
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-right">
               <a href="#"> Pancake Protectors </a>
             </div>
           </div>
-          <!-- NAVBAR LEFT SETTINGS-->
           <div class="dropdown">
             <a class="dropdownbtn__link" href="#">
               <svg
@@ -678,7 +671,7 @@
                 />
               </svg>
             </a>
-            <div class="dropdown__content">
+            <div class="dropdown__content dropdown__content-other">
               <a href="#">Info</a>
               <a href="#">IFO</a>
               <a href="#">Voting</a>
@@ -691,8 +684,6 @@
           </div>
         </div>
       </div>
-      <!-- NAVBAR LEFT END-->
-      <!-- NAVBAR RIGHT START -->
       <div class="navbar-r">
         <div class="navbar-r__content">
           <div class="navbar-r__currency">
@@ -719,8 +710,6 @@
                   ></path>
                 </svg>
               </a>
-              <!-- NAVBAR RIGHT LANGUAGES-->
-
               <div class="dropdown__content">
                 <a href="#">العربية</a>
                 <a href="#">বাংলা</a>
@@ -753,7 +742,6 @@
               </div>
             </div>
           </div>
-          <!-- NAVBAR RIGHT BUTTON SETTINGS-->
           <div class="dropdown dropdown--settings" id="popup_btn">
             <a class="dropdownbtn">
               <svg
@@ -770,8 +758,6 @@
               </svg>
             </a>
           </div>
-          <!-- NAVBAR RIGHT BUTTON BNB CHAIN -->
-
           <div class="bnb-smart-chain">
             <div class="dropdown">
               <div class="dropdown-bnb">
@@ -781,9 +767,8 @@
                     alt="cubo-portal"
                   />
                   <span class="sx-block">BNB</span>
-                  <!--//TO REFACTOR -->
-                  <span class="lg-block">BNB Smart Chain</span
-                  ><!--//TO REFACTOR -->
+
+                  <span class="lg-block">BNB Smart Chain</span>
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     viewBox="0 0 24 24"
@@ -3862,5 +3847,6 @@
     <script src="./script/phishing-warning.js" type="module"></script>
     <script src="./script/nav-buttons.js"></script>
     <script src="./script/button-scroll.js"></script>
+    <script src="./script/navbar-sticky.js"></script>
   </body>
 </html>
